tests/ui/parser/issues/issue-34255-1.stderr
error: expected one of `!`, `)`, `,`, `.`, `::`, `?`, `{`, or an operator, found `:`
  --> $DIR/issue-34255-1.rs:8:22
   |
LL |     Test::Drill(field: 42);
   |                      ^ expected one of 8 possible tokens

error: aborting due to previous error

